--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,28 +9,28 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
+      - image: busybox
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
           name: "Save file"
-          command: "echo Hello, World! > /tmp/workspace/greeting.txt"
+          command: "echo Hello, World! > /tmp/greeting.txt"
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: /tmp
           paths:
             - greeting.txt
   print-greeting-file:
     docker:
-      - image: cimg/base:stable
+      - image: busybox
     steps:
       - checkout
       - run:
           name: "Print greeting"
           command: "cat greeting.txt"
       - attach_workspace:
-          at: /tmp/workspace
+          at: /tmp
 
     
 
